feat: fixed yaml file, added decrypt route, general logic works.
