# src/storageExplorer/controllers/storageExplorer.controller.ts
@@ -15,15 +15,16 @@ import { decryptPath, DirOperations, encryptPath, filesArrayToMapObject } from '
 // --  Both request should get path string, defaulted by mountDir --
 
 // Should return file content by its id
-type GetFileContentByIdHandler = RequestHandler<undefined, any, string, { id: string }>;
+type GetFileContentByIdHandler = RequestHandler<undefined, {data: JSON | string} | {error: string}, undefined, { id: string }>;
 
 // Should return file content by its id
-type GetFileHandler = RequestHandler<undefined, any, string, { path: string }>;
-
+type GetFileHandler = RequestHandler<undefined, {data: JSON | string} | { error: string }, undefined, { pathSuffix: string }>;
 
 // Should return FileMap ( directory content )
-type GetFolderHandler = RequestHandler<undefined, IFileMap<IFile> | {error: string}, string>;
+type GetDirectoryHandler = RequestHandler<undefined, {data: IFileMap<IFile>} | { error: string }, undefined, { pathSuffix: string }>;
 
+// Should decrypt id to path suffix
+type DecryptIdHandler = RequestHandler<undefined, {data: string} | { error: string }, undefined, { id: string }>
 
 @injectable()
 export class StorageExplorerController {
@@ -35,60 +36,77 @@ export class StorageExplorerController {
     private readonly dirOperations: DirOperations
   ) {}
 
-
   public getFile: GetFileHandler = async (req, res) => {
     try {
-      if(typeof req.query === 'undefined' || !('path' in req.query)) {
-        throw new Error('path query is mandatory!');
-      }
+      const mountDir = this.config.get<string>('mountDir');
+      const pathSuffix: string = req.query.pathSuffix;
+      const filePath = path.join(mountDir, pathSuffix);
+      const fileContentBuffer = await this.dirOperations.getFileContent(filePath);
+      const stringContent = fileContentBuffer.toString('utf-8')
 
-      const path: string = req.query.path;
-      const fileContentBuffer = await this.dirOperations.getFileContent(path);
-
-      res.send(JSON.parse(fileContentBuffer.toString('utf-8')))
+       try {
+         res.send({data: JSON.parse(stringContent) as JSON});
+       } catch (e) {
+         res.send({data: stringContent});
+       }
 
     } catch (e) {
-      res.status(httpStatus.INTERNAL_SERVER_ERROR).send({error: (e as Error).message});
+      res.status(httpStatus.INTERNAL_SERVER_ERROR).send({ error: (e as Error).message });
     }
   };
 
   public getFileContentById: GetFileContentByIdHandler = async (req, res) => {
     try {
-      if(typeof req.query === 'undefined' || !('id' in req.query)) {
-        throw new Error('id query is mandatory!');
-      }
-
       const fileId: string = req.query.id;
       const pathDecrypted = decryptPath(fileId);
       const fileContentBuffer = await this.dirOperations.getFileContent(pathDecrypted);
+      const stringContent = fileContentBuffer.toString('utf-8')
 
-      res.send(JSON.parse(fileContentBuffer.toString('utf-8')))
+      try {
+        res.send({data: JSON.parse(stringContent) as JSON});
+      } catch (e) {
+        res.send({data: stringContent});
+      }
 
     } catch (e) {
-      res.status(httpStatus.INTERNAL_SERVER_ERROR).send({error: (e as Error).message});
+      res.status(httpStatus.INTERNAL_SERVER_ERROR).send({ error: (e as Error).message });
     }
   };
 
-  public getFolder: GetFolderHandler = async (req, res) => {
-    const mountDir = this.config.get<string>('mountDir');
-    const folderPath = path.join(mountDir, '3D_data','1b');
-
+  public decryptId: DecryptIdHandler = (req, res) => {
     try {
-        const folderContent = await this.dirOperations.getDirectoryContent(folderPath);
-       
-        const dirContentArray: IFile[] = folderContent.map(entry => {
-        const filePathEncrypted = encryptPath(path.resolve(folderPath, entry.name));
-        const fileFromEntry: IFile = {id: filePathEncrypted, name: entry.name, isDir: entry.isDirectory()};
+      if (typeof req.query === 'undefined' || !('id' in req.query)) {
+        throw new Error('id query is mandatory!');
+      }
+      const encryptedId: string = req.query.id;
+      const pathDecrypted = decryptPath(encryptedId);
 
-        return fileFromEntry;
-      })
+      res.send({data: pathDecrypted});
+    } catch (e) {
+      res.status(httpStatus.INTERNAL_SERVER_ERROR).send({ error: (e as Error).message });
+    }
+  };
+
+  public getDirectory: GetDirectoryHandler = async (req, res) => {
+    try {
+        const mountDir = this.config.get<string>('mountDir');
+        const pathSuffix: string = req.query.pathSuffix;
+        const directoryPath = path.join(mountDir, pathSuffix);
+        const directoryContent = await this.dirOperations.getDirectoryContent(directoryPath);
+
+        const dirContentArray: IFile[] = directoryContent.map((entry) => {
+          const filePathEncrypted = encryptPath(path.join(directoryPath, entry.name));
+          const fileFromEntry: IFile = { id: filePathEncrypted, name: entry.name, isDir: entry.isDirectory() };
+
+          return fileFromEntry;
+        });
 
       const dirContentMap = filesArrayToMapObject(dirContentArray);
 
-
-      res.send(dirContentMap);
+      res.send({data: dirContentMap});
     } catch (e) {
-      res.status(httpStatus.INTERNAL_SERVER_ERROR).send({error: (e as Error).message});
+      res.status(httpStatus.INTERNAL_SERVER_ERROR).send({ error: (e as Error).message });
     }
   };
+
 }
